# king-test

./: CMakeLists.txt  README.md
src/: main.cpp
src/Application/: Application.cpp  Application.h
src/Controllers/: ExecutionController.cpp  ExecutionController.h
src/DataModels/: Message.cpp  Message.h  User.h
src/Databases/Implementations/: IuMapDatabase.h  IuMapDatabase.tpp  UMapDatabase.h  UMapDatabase.tpp
src/Databases/Interfaces/: BaseDatabase.h  MessagesDatabase.cpp  MessagesDatabase.h  UsersDatabase.cpp  UsersDatabase.h
src/Exceptions/: RuntimeError.h
src/Services/: InputService.cpp  InputService.h  LocalizationService.cpp  LocalizationService.h  OutputService.cpp  OutputService.h
